# openbis-bode

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  pyproject.toml
scripts/: crontab_helper.sh  crontab_helper_Isolera.sh  crontab_helper_NMR.sh  path.py  upload_data.py  upload_data.sh  upload_data_from_mobias.sh  upload_data_test.sh  utils.py
src/bode_loader/: Isolera_to_openBIS.py  NMR_to_openBIS.py  fetch_space_structure.py  openbis_helper.py  path.py  upload_data.py  upload_data_from_mobias.sh  utils.py
tests/: conftest.py  test_upload_data.py
